<resources>
    <string name="app_name">Сервис приветствия</string>
    <string name="title_activity_register">Регистрация</string>

    <!-- Strings related to register activity -->
    <string name="prompt_surname">Фамилия</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_patronymic">Отчество</string>
    <string name="prompt_city">Город</string>
    <string name="action_sign_in">Регистрация</string>
    <string name="action_sign_in_short">Регистрация</string>
    <string name="prompt_cancel">Отменить</string>
    <string name="prompt_accept">Ок</string>

    <!-- Strings related to main activity -->
    <string name="prompt_menu">Меню</string>
    <string name="prompt_register_button">Регистрация</string>
    <string name="prompt_welcome_button">Приветствие</string>


</resources>
